update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Quotient.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="theme-color" content="#00ffb3" />
+
+    <meta property="og:url" content="https://quotientbot.xyz/" />
+    <meta property="og:site_name" content="Quotient" />
+    <meta property="og:image" content="%PUBLIC_URL%/Quotient.png" />
+
+    <meta
+      name="description"
+      content="Quotient is a powerful and customizable open-source Discord bot designed to help Esports servers manage and organize scrims, tournaments, and more for mobile and PC games. With close to no paywalls, Quotient simplifies the process of managing a Discord server by removing the need for multiple bots. Try it today and empower your Discord server with the best-in-class tools for Esports management."
+    />
+
+    <meta
+      property="og:description"
+      content="Quotient is a powerful and customizable open-source Discord bot designed to help Esports servers manage and organize scrims, tournaments, and more for mobile and PC games. With close to no paywalls, Quotient simplifies the process of managing a Discord server by removing the need for multiple bots. Try it today and empower your Discord server with the best-in-class tools for Esports management."
+    />
+
+    <meta
+      name="keywords"
+      content="Quotient, Discord bot, Esports, management, scrims, tournaments, mobile games, PC games, open source, cod, freefire, bgmi, pubg mobile"
+    />
+    <meta property="og:title" content="Quotient - The Ultimate Discord Bot for Esports Management" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,34 +34,11 @@
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Quotient - The Ultimate Discord Bot for Esports Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
